[package]
name = "sqlx-ts"
version = "0.45.0"
edition = "2021"
homepage = "https://github.com/JasonShin/sqlx-ts"
authors = ['Jason Shin <visualbbasic@gmail.com>']
license = "MIT"
description = "A tool for Javascript/Typescript for compile-time safe SQL queries"
readme = "README.md"
keywords = ["cli", "sql", "sqlx", "typescript", "javascript"]
categories = ["command-line-utilities"]
documentation = "https://jasonshin.github.io/sqlx-ts/"

[dependencies]
color-eyre = "0.6.5"
thiserror = "2.0.18"
dotenv = "0.15.0"
swc_common = { version = "21.0.1", features = ["tty-emitter"] }
swc_ecma_ast = "23.0.0"
swc_ecma_parser = "39.0.0"
walkdir = "2.5.0"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
sqlparser = { version = "0.61.0" }
regex = { version = "1.12.3" }
convert_case = "0.11.0"
colored = "3.1.1"
mysql_async = { version = "0.36.2", features = ["minimal"] }
tokio-postgres = "0.7.17"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "default"]}
async-recursion = "1.1.1"
bb8 = "0.9.1"
rusqlite = { version = "0.39", features = ["bundled"] }
log = "0.4.29"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
test_utils = { path="test-utils" }
pretty_assertions = "1.4.1"
rusqlite = { version = "0.39", features = ["bundled"] }
