[package]
name = "sqlx-ts-core"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.2" }
mysql = { version = "22.1.0" }
swc_common = { version = "0.17.18", features = ["tty-emitter"] }
sqlx-ts-common = { path = "../sqlx-ts-common" }
